Fix up image alignment

--- a/sites/refracted/src/styles/ryoji.css
+++ b/sites/refracted/src/styles/ryoji.css
@@ -108,8 +108,8 @@ figure {
 }
 
 figure:has(img){
+    min-width: 100px;
     max-width: 300px;
-    width:100%;
     margin: auto 1.5rem;
     img {
         max-width: inherit;
